<resources>
    <string name="app_name">SP Golg</string>
    <string name="tv_inicio">Bienvenido a SP Gold Pro.</string>
    <string name="boton_ventas">VENTAS</string>
    <string name="boton_config">configuracion</string>
    <string name="spinner_lot">SORTEO:</string>
    <string name="spinner_hor">HORA:</string>
    <string name="monto">MONTO</string>
    <string name="numero">NUMERO</string>
    <string name="cliente">Nombre del cliente...</string>
    <string name="vender">VENDER</string>
    <string name="cancelar">CANCELAR</string>
    <string name="agregar">Agregar loteria</string>
    <string name="editar">Editar loteria</string>
    <string name="configtv">|**CONFIGURACION**|</string>
    <string name="atras">Atras</string>
    <string name="cambiar_fecha">Cambiar fecha</string>
    <string name="password_et">Password...</string>
    <string name="borrar">Borrar loteria</string>
    <string name="reportes">Reportes</string>
    <string name="reporte_ventas">Reportes de ventas</string>
    <string name="reporte_winners">Reportes de ganadores</string>
    <string name="admin_invoices">Administrar facturas</string>
    <string name="reportes_tv">Reportes</string>
    <string name="ventas_tv">Ventas</string>
    <string name="repventas_tvr">Reporte de ventas</string>
    <string name="loteria">Loteria</string>
    <string name="winventas_tvr">Reporte de ganadores</string>
    <string name="ingrese_num_premio">Numero premio?</string>
    <string name="paga_x_veces">Tipo de premio?</string>
    <string name="veces">veces</string>
    <string name="gen_rep">Generar reporte</string>
    <string name="bolita">Color bolita?</string>
    <string name="primero">Primero</string>
    <string name="segundo">Segundo</string>
    <string name="guardando">   Guardando...  </string>
    <string name="tercero">Tercero</string>
    <string name="Selecciones_loteria">Seleccione la loteria</string>
    <string name="accion">Accion</string>
    <string name="borrar_loteria">  Borrando loteria...</string>
    <string name="nombre_loteria">Nombre del sorteo</string>
    <string name="nombre_puesto">Nombre del puesto</string>
    <string name="premio_1">Premio 1: </string>
    <string name="mensaje_cancelar_atras">Para cancelar presione atras...</string>
    <string name="porcentaje_muy_alto">Porcentaje no puede ser mayor a 100%</string>
    <string name="porcentaje_muy_bajo">Porcentaje no puede ser inferior al 0%</string>
    <string name="Limite_maximo">Limite maximo: </string>
    <string name="cantempty_limit">Debe ingresar un monto limite..</string>
    <string name="premio_2">Premio 2: </string>
    <string name="comision_vendedor">Porcentaje de comision (%): </string>
    <string name="numero_maquina">Numero de maquina: </string>
    <string name="confirm">CONFIRMAR</string>
    <string name="Seleccionar_horarios">Configurar horarios del sorteo...</string>
    <string name="hora_juego"> Hora\njuego</string>
    <string name="titulo_administrar">Administracion</string>
    <string name="ingresar_premios">Ingresar Num. premios</string>
    <string name="vendedores">Ver vendedor</string>
    <string name="vendedores2">Vendedores</string>
    <string name="edit_loterias">Ver listas</string>
    <string name="pedir_codigo_tv">Introduzca su codigo de vendedor...</string>
    <string name="pedir_codigo_et">CODIGO VENDEDOR</string>
    <string name="agregar_horbt">Agregar</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="saludo_agregar_winners">Agregar numeros ganadores</string>
    <string name="generar_cierre">Generar cierre</string>
    <string name="reimprimir">IMPRIMIR</string>
    <string name="derechos_autor">Producida por SP soft corp. Tel. +506 72150195</string>
    <string name="ingresar_factura">Ingrese el numero de factura...</string>
    <string name="borrar_factura">BORRAR</string>
    <string name="on_constr">EN CONSTRUCCION. VOLVEREMOS PRONTO!!!</string>
    <string name="hora_lista"> Hora\nlista</string>
    <string name="hora_juegotv">Hora del juego</string>
    <string name="hora_listatv">Hora limite</string>
    <string name="imprimir">Imprimir</string>
    <string name="administrar">Administrar</string>
    <string name="success_edit">Loteria editada correctamente</string>
    <string name="toolong">Nombre demasiado largo</string>
    <string name="toolong_num">Numero demasiado grande</string>
    <string name="cantempty_nombre">Debe indicar el nombre del sorteo</string>
    <string name="cantempty_comision">Debe indicar la comision porcentual del vendedor</string>
    <string name="cantempty_num_maquina">Debe indicar un numero que identifica la maquina!</string>
    <string name="cantempty_nombre_puesto">Debe indicar el nombre del puesto</string>
    <string name="cantempty_num">Debe indicar la cantidad de veces que paga</string>
    <string name="subir_resultado">Subir resultado</string>
    <string name="primer_premio">Primero</string>
    <string name="segundo_premio">Segundo</string>
    <string name="tercer_premio">Tercero</string>
    <string name="ver_resultados">Ver resultados</string>
    <string name="winner_listo">Mensaje:\n\n\n\nRESULTADO SE HA SUBIDO CORRECTAMENTE!!!</string>
</resources>