<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParleyActivity">

    <TextView
        android:id="@+id/tv_winparley"
        android:layout_width="256dp"
        android:layout_height="35dp"
        android:text="@string/winventas_tvr"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_lot_par"
        android:layout_width="274dp"
        android:layout_height="57dp"
        android:layout_marginStart="28dp"
        android:text="Loteria"
        android:textColor="#FF070AB8"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ingrese_lot_par" />

    <Spinner
        android:id="@+id/spinner_hor_par"
        android:layout_width="277dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ingrese_hor_par" />

    <TextView
        android:id="@+id/tv_ingrese_hor_par"
        android:layout_width="230dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/spinner_hor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lot_par" />

    <TextView
        android:id="@+id/tv_ingrese_lot_par"
        android:layout_width="234dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/loteria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_winparley" />

    <EditText
        android:id="@+id/et_numwinn_par"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:hint="@string/primero"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_hor_par" />

    <EditText
        android:id="@+id/et_numwinn2_par"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:hint="@string/segundo"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_hor_par" />

    <EditText
        android:id="@+id/et_numwinn3_par"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:hint="@string/tercero"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_hor_par" />

    <TextView
        android:id="@+id/textView_par3"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_marginTop="284dp"
        android:text="@string/veces"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lot_par" />

    <TextView
        android:id="@+id/textView_paga_par"
        android:layout_width="129dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/paga_x_veces"
        app:layout_constraintBottom_toTopOf="@+id/textView_par3"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinner_paga_par"
        android:layout_width="123dp"
        android:layout_height="80dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_hor_par" />

    <Button
        android:id="@+id/button_generar"
        android:layout_width="130dp"
        android:layout_height="95dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:onClick="tirar_reporte"
        android:text="@string/gen_rep"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_numwinn_par" />

</androidx.constraintlayout.widget.ConstraintLayout>