<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_inicio"
        android:layout_width="302dp"
        android:layout_height="39dp"
        android:layout_marginTop="60dp"
        android:text="@string/tv_inicio"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tv_inicio" />

    <Button
        android:id="@+id/button_ventas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:backgroundTint="@color/green"
        android:hint="@string/boton_ventas"
        android:onClick="ventas"
        android:text="@string/boton_ventas"
        android:textColor="@color/red"
        app:iconTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_inicio" />

    <Button
        android:id="@+id/button_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/red"
        android:hint="@string/boton_config"
        android:onClick="config"
        android:text="@string/boton_config"
        android:textColor="@color/black"
        app:iconTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_reportes" />

    <Button
        android:id="@+id/button_reportes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/blue"
        android:onClick="reportes"
        android:text="@string/reportes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ventas" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_et"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/derechos_autor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/boton_admin"
        android:layout_width="259dp"
        android:layout_height="67dp"
        android:layout_marginTop="36dp"
        android:onClick="administrar"
        android:text="@string/administrar"
        app:layout_constraintBottom_toTopOf="@+id/button_ventas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_inicio"
        app:layout_constraintVertical_bias="0.273" />

    <TextView
        android:id="@+id/textView_esperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="8dp"
        android:text="@string/pedir_codigo_tv"
        app:layout_constraintBottom_toTopOf="@+id/et_ID"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_ID"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:hint="@string/pedir_codigo_et"
        android:inputType="textPersonName|text|textCapWords"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />
</androidx.constraintlayout.widget.ConstraintLayout>